# habit_tracker

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  ci.yml  test-only.yml  test-token.yaml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_rename_related_wont_habits_related_habit.py
nginx/: nginx.conf
users/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_username.py  0003_alter_user_username.py
